# vyupgrade

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  plan.md  pyproject.toml  review.md
.github/workflows/: ci.yml  publish.yml
docs/: migration-coverage.md  vyper-syntax-history.md
scripts/: corpus.py  release_notes.py  release_preflight.py  smoke-wheel.sh  smoke-yearn.sh
src/vyupgrade/: __init__.py  analysis.py  ast_facts.py  cli.py  closure.py  compiler.py  compiler_runner.py  engine.py  interfaces.py  legacy_vyper.py  models.py  project.py  reporting.py  rule_helpers.py  rule_registry.py  rules.py  source.py  storage_layout.py  validation.py  versions.py  vyper_builtins.py  write_plan.py
src/vyupgrade/rule_groups/: __init__.py  comparisons.py  data_lifecycle.py  diagnostics.py  external_call_helpers.py  external_calls.py  interfaces.py  legacy.py  legacy_builtins.py  legacy_call_helpers.py  legacy_diagnostics.py  legacy_interfaces.py  meta.py  numeric.py  numeric_casts.py  numeric_constant_helpers.py  numeric_constants.py  numeric_context_casts.py  numeric_operators.py  numeric_ranges.py  numeric_scope.py  numeric_signedness.py  numeric_types.py
tests/: conftest.py  test_analysis.py  test_ast_facts.py  test_cli.py  test_cli_integration.py  test_closure.py  test_compiler.py  test_corpus.py  test_docs.py  test_engine.py  test_interface_splitting.py  test_release_notes.py  test_release_preflight.py  test_reporting.py  test_rule_registry.py  test_rules.py  test_storage_layout.py  test_versions.py  test_write_plan.py
tests/fixtures/: erc4626_interface_getter.vy  migration_03.vy
tests/rule_groups/: test_comparisons.py  test_data_lifecycle.py  test_diagnostics.py  test_external_calls.py  test_interfaces.py  test_legacy.py  test_legacy_builtins.py  test_legacy_diagnostics.py  test_legacy_interfaces.py  test_numeric.py  test_numeric_constants.py  test_numeric_operators.py  test_numeric_ranges.py  test_numeric_signedness.py
