[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vyupgrade"
version = "0.1.0"
description = "Compiler-backed codemod tool for upgrading Vyper contracts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "banteg" }]
dependencies = ["polars>=1.30", "uv>=0.8.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
vyupgrade = "vyupgrade.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
