[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "vyupgrade"
version = "0.1.0"
description = "Compiler-backed codemod tool for upgrading Vyper contracts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "banteg" }]
dependencies = ["uv>=0.8.0"]

[project.scripts]
vyupgrade = "vyupgrade.cli:main"

[dependency-groups]
dev = [
    "polars>=1.30",
    "pytest>=8",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
exclude-newer = "2026-05-27T14:26:03.814034Z"

[tool.uv.build-backend]
source-exclude = [".DS_Store"]

[tool.ruff]
line-length = 100
target-version = "py311"
