[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "vyupgrade"
version = "0.1.0"
description = "Compiler-backed tool for upgrading Vyper contracts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "banteg" }]
keywords = ["codemod", "migration", "smart-contracts", "vyper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["rich>=13.0.0", "uv>=0.8.0"]

[project.urls]
Homepage = "https://github.com/banteg/vyupgrade"
Repository = "https://github.com/banteg/vyupgrade"
Issues = "https://github.com/banteg/vyupgrade/issues"
Changelog = "https://github.com/banteg/vyupgrade/blob/master/CHANGELOG.md"

[project.scripts]
vyupgrade = "vyupgrade.cli:main"

[dependency-groups]
dev = [
    "polars>=1.30",
    "pytest>=8",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
exclude-newer = "2026-05-27T14:26:03.814034Z"

[tool.uv.build-backend]
source-exclude = [".DS_Store"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "PIE",
    "PLR1704",
    "PLW2901",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    # Tempfile creation uses try/fallback paths, then closes via `with tmp:`.
    "SIM115",
]
